Did most of the bill container and Initiated the Tip container

--- a/style.css
+++ b/style.css
@@ -4,18 +4,53 @@
 }
 
 body {
-  background-color: #f4fafa;
+  background-color: #c5e4e7;
 }
 
 #logo {
   display: flex;
   justify-content: center;
+  height: 15vh;
+  align-items: center;
+}
+#logo img {
+  width: 87px;
+  height: 54px;
 }
 
 #main-container {
   width: 100vw;
-  height: auto;
+  height: 85vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: white;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+#bill-container {
+  width: 80%;
+  padding: 5%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+}
+#bill-container input {
+  padding: 5px;
+  height: 30px;
+  background-color: #f4fafa;
+  border: none;
+  text-align: right;
+  color: #00494d;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+#tip-container {
+  width: 80%;
+  display: flex;
   border: 1px solid black;
 }
 
