--- a/style.scss
+++ b/style.scss
@@ -55,7 +55,7 @@ body {
 }
 
 #tip-container {
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -77,5 +77,31 @@ body {
         color: white;
 
         background-color: $backgroundColor-money;
+    }
+}
+
+#peopleAmount-container {
+    width: 80%;
+    border: 1px solid black;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    h4{
+        margin: 2px;
+        margin-bottom: 10px;
+    }
+
+    .nbofPeopleInput{
+        height: 30px;
+        padding: 5px;
+        background-color: $backgroundColor-input;
+        text-align: right;
+        font-size: 24px;
+        font-weight: bold;
+        color: $backgroundColor-money;
+        border: none;
+
     }
 }
