--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
   margin: 0;
 }
 
-body {
+body input {
   background-color: #c5e4e7;
+  font-family: "Space Mono";
+}
+
+h4 {
+  color: #5e7b7d;
 }
 
 #logo {
