--- a/style.scss
+++ b/style.scss
@@ -7,36 +7,38 @@ $backgroundColor-money: hsl(183, 100%, 15%);
     margin: 0;
 }
 
-body input {
+body,
+input {
     background-color: $backgroundColor-body;
     font-family: 'Space Mono';
 }
 
-h4 {
+h4,h5 {
     color: hsl(184, 14%, 43%);
 }
 
 #logo {
     display: flex;
     justify-content: center;
-    height: 15vh;
+    height: 10vh;
     align-items: center;
+    margin: 10px;
 
     img {
         width: 87px;
         height: 54px;
+
     }
 }
 
 #main-container {
     width: 100vw;
-    height: 85vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: white;
-    border: 1px solid black;
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
 }
 
 #bill-container {
@@ -45,7 +47,6 @@ h4 {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
 
     input {
         padding: 5px;
@@ -64,7 +65,6 @@ h4 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    border: 1px solid black;
 
     h4 {
         width: 100%;
@@ -87,8 +87,7 @@ h4 {
 
 #peopleAmount-container {
     width: 80%;
-    border: 1px solid black;
-    padding: 5%;
+    padding: 7%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -108,5 +107,55 @@ h4 {
         color: $backgroundColor-money;
         border: none;
 
+    }
+}
+
+#final-container {
+    background-color: $backgroundColor-money;
+    width: 80%;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Space Mono';
+    text-align: center;
+    border-radius: 10px;
+
+    #tip,
+    #total {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 15px;
+
+        h4 {
+            color: white;
+        }
+
+        #tipPerson,#totalPerson {
+            text-align: start;
+            margin: 10px;
+
+        }
+        
+
+        h3 {
+            color: hsl(172, 67%, 45%);
+            font-size: 24px;
+            margin: 10px;
+        }
+
+    }
+
+    #resetBtn {
+        background-color: hsl(172, 67%, 45%);
+        margin: 20px;
+        height: 2em;
+        font-size: 18px;
+        color: $backgroundColor-money;
+        border-radius: 5px;
+        border: none;
+        text-align: center;
+        font-weight: bold;
     }
 }
