--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ h4, h5 {
   color: white;
   background-color: #00494d;
 }
+#tip-container input:last-of-type {
+  background-color: #f4fafa;
+  color: #00494d;
+}
 
 #peopleAmount-container {
   width: 80%;
