--- a/style.scss
+++ b/style.scss
@@ -64,6 +64,7 @@ h5 {
         color: hsl(183, 100%, 15%);
         font-size: 24px;
         font-weight: bold;
+        border-radius: 5px;
     }
 }
 
@@ -129,6 +130,7 @@ h5 {
         font-weight: bold;
         color: $backgroundColor-money;
         border: none;
+        border-radius: 5px;
 
     }
 }
