made the Onfocus border change for the input fields

--- a/style.scss
+++ b/style.scss
@@ -121,7 +121,7 @@ h5 {
         margin-bottom: 10px;
     }
 
-    .nbofPeopleInput {
+    #nbofPeopleInput {
         height: 30px;
         padding: 5px;
         background-color: $backgroundColor-input;
