--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ h5 {
   margin: 2px;
   margin-bottom: 10px;
 }
-#peopleAmount-container .nbofPeopleInput {
+#peopleAmount-container #nbofPeopleInput {
   height: 30px;
   padding: 5px;
   background-color: #f4fafa;
