--- a/style.scss
+++ b/style.scss
@@ -110,6 +110,7 @@ h5 {
         color: hsl(186, 14%, 43%);
         font-weight: bold;
         font-size: 24px;
+        width: 10px;
     }
     
 }
