--- a/style.scss
+++ b/style.scss
@@ -66,6 +66,11 @@ h5 {
         font-weight: bold;
         border-radius: 5px;
     }
+    #billAmountInput{
+        background-image: url('images/icon-dollar.svg');
+        background-repeat: no-repeat;
+        background-position: 5% 50%;
+    }
 }
 
 #tip-container {
@@ -131,6 +136,9 @@ h5 {
         height: 30px;
         padding: 5px;
         background-color: $backgroundColor-input;
+        background-image: url('images/icon-person.svg');
+        background-repeat: no-repeat;
+        background-position: 5% 50%;
         text-align: right;
         font-size: 24px;
         font-weight: bold;
