--- a/style.css
+++ b/style.css
@@ -66,6 +66,16 @@ h5 {
   background-position: 5% 50%;
 }
 
+#textContainer1 {
+  display: flex;
+  justify-content: space-between;
+}
+
+#textContainer2 {
+  display: flex;
+  justify-content: space-between;
+}
+
 #tip-container {
   width: 80%;
   display: flex;
@@ -76,6 +86,7 @@ h5 {
 #tip-container h4 {
   width: 100%;
   margin: 10px;
+  flex: 1 1 auto;
 }
 #tip-container .tip-button {
   height: 40px;
