--- a/style.scss
+++ b/style.scss
@@ -66,11 +66,21 @@ h5 {
         font-weight: bold;
         border-radius: 5px;
     }
-    #billAmountInput{
+
+    #billAmountInput {
         background-image: url('images/icon-dollar.svg');
         background-repeat: no-repeat;
         background-position: 5% 50%;
     }
+}
+
+#textContainer1 {
+    display: flex;
+    justify-content: space-between;
+}
+#textContainer2 {
+    display: flex;
+    justify-content: space-between;
 }
 
 #tip-container {
@@ -83,6 +93,7 @@ h5 {
     h4 {
         width: 100%;
         margin: 10px;
+        flex: 1 1 auto;
     }
 
     .tip-button {
@@ -99,7 +110,8 @@ h5 {
 
 
     }
-    .active{
+
+    .active {
         background-color: hsl(172, 67%, 45%);
         color: $backgroundColor-body;
     }
@@ -117,7 +129,7 @@ h5 {
         font-size: 24px;
         width: 10px;
     }
-    
+
 }
 
 #peopleAmount-container {
