--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ h5 {
   color: #5e7b7d;
 }
 
+#red-warning {
+  display: none;
+  color: red;
+}
+
 #logo {
   display: flex;
   justify-content: center;
