--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,10 @@ h4,
 h5 {
     color: hsl(184, 14%, 43%);
 }
-
+#red-warning{
+    display: none;
+    color: red;
+}
 #logo {
     display: flex;
     justify-content: center;
