--- a/style.scss
+++ b/style.scss
@@ -71,7 +71,7 @@ h5 {
     }
 
     #billAmountInput {
-        background-image: url('images/icon-dollar.svg');
+        background-image: url('icon-dollar.svg');
         background-repeat: no-repeat;
         background-position: 5% 50%;
     }
